Bring to the utilitarian class the processing of incoming errors in clients